--- a/style.css
+++ b/style.css
@@ -20,25 +20,51 @@ body {
     cursor: default;
 }
 /* logo */
-.logo {
+.logo-small {
     position: absolute;
-    top: .75rem;
-    left: 1rem;
-    font-size: clamp(1rem, 3vw, 1.2rem);
+    top: 1.75rem;
+    left: 1.25rem;
+    font-size: clamp(1.75rem, 3vw, 2.5rem);
     font-family: "Cinzel", serif;
+    visibility: visible;
+    opacity: 1;
+    transition: 200ms ease;
     z-index: 1;
+}
+.logo-small.active {
+    visibility: hidden;
+    opacity: 0;
+}
+.logo-large {
+    position: absolute;
+    top: 65%;
+    left: 30.5%;
+    transform: translateY(-50%, -50%);
+    font-family: "Cinzel", serif;
+    font-size: clamp(7rem, 3vw, 10.5rem);
+    visibility: hidden;
+    opacity: 0;
+    transition: 350ms ease;
+    z-index: 1;
+}
+.logo-large.active {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(50px);
 }
 /* hero */
 .hero img {
     position: relative;
     width: 100%;
     min-height: 100vh;
+    object-fit: cover;
 }
 .hero .turtle {
     width: 100%;
     height: auto;
     position: absolute;
     inset: 0;
+    z-index: 1;
 }
 /* main */
 .grid-container {
@@ -50,6 +76,7 @@ body {
 .grid-container img {
     width: 100%;
     height: auto;
+    color: var(--clr-white);
 }
 .grid-container h2 {
     text-transform: capitalize;
