--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Didact+Gothic&family=Paytone+One&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -17,12 +18,13 @@ body {
     font-family: "Didact Gothic", serif;
     color: var(--clr-white);
     background-color: var(--clr-darkTeal);
+    overflow-x: hidden;
     cursor: default;
 }
 /* logo */
 .logo-small {
     position: absolute;
-    top: 1.75rem;
+    top: .75rem;
     left: 1.25rem;
     font-size: clamp(1.75rem, 3vw, 2.5rem);
     font-family: "Cinzel", serif;
@@ -50,24 +52,23 @@ body {
 .logo-large.active {
     visibility: visible;
     opacity: 1;
-    transform: translateY(50px);
+    transform: translateY(72px);
 }
 /* hero */
 .hero img {
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
     object-fit: cover;
     mask-image: linear-gradient(180deg, 
     rgba(0, 0, 0, 1) 70%, 
     transparent 90%);
 }
-.hero .turtle {
-    width: 100%;
+.hero #turtle {
+    width: 90%;
     height: auto;
     position: absolute;
-    inset: 0;
-    z-index: 1;
+    z-index: 2;
 }
 /* main */
 .grid-container {
