--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     font-size: clamp(7rem, 3vw, 10.5rem);
     visibility: hidden;
     opacity: 0;
-    transition: 200ms ease;
+    transition: 350ms ease-out;
     z-index: 1;
 }
 .logo-large.active {
@@ -82,6 +82,7 @@ body {
     width: 100%;
     height: auto;
     color: var(--clr-white);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
 }
 .grid-container h2 {
     text-transform: capitalize;
