--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --clr-darkBlue: #08232c;
     --clr-lightTeal: #123642;
     --clr-darkTeal: #062f3d;
+    --clr-seafoam: #afafd7;
 }
 body {
     width: 100%;
@@ -20,6 +21,38 @@ body {
     background-color: var(--clr-darkTeal);
     overflow-x: hidden;
     cursor: default;
+}
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 20px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--clr-seafoam);
+    border-radius: 2px;
+}
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+/* login & sign in */
+header ul {
+    position: absolute;
+}
+header ul li {
+    position: relative;
+    top: 1rem;
+    left: 1rem;
+    padding-right: .75rem;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--clr-offWhite);
+    text-transform: capitalize;
+    z-index: 3;
+}
+header ul li:nth-child(1),
+header ul li:nth-child(3) {
+    cursor: pointer;
 }
 /* logo */
 .logo {
@@ -108,6 +141,21 @@ body {
     font-size: clamp(1.12rem, 3vw, 1.3rem);
     letter-spacing: .5px;
     margin: 10px auto;
+}
+.banner .btn {
+    display: inline-block;
+    background: var(--clr-lightTeal);
+    margin: 25px auto;
+    cursor: pointer;
+}
+.banner a {
+    display: block;
+    color: var(--clr-white);
+    padding: .75rem 1rem;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
 }
 /* horizontal scroll */
 .horizontal-scroll {
