--- a/style.css
+++ b/style.css
@@ -123,13 +123,13 @@ header ul li:nth-child(3) {
 .grid-container .left p {
     margin-left: 1rem;
 }
-/* banner */
+/* banners */
 .banner {
     margin: 1rem auto;
+    padding: 8rem;
     text-align: center;
     width: 100%;
     background: var(--clr-darkBlue);
-    padding: 10rem;
 }
 .banner h2 {
     font-family: "Paytone One", serif;
@@ -143,11 +143,12 @@ header ul li:nth-child(3) {
     letter-spacing: .5px;
     margin: 10px auto;
 }
+/* donate button */
 .banner .btn {
     display: inline-block;
     background: var(--clr-darkTeal);
     position: relative;
-    top: 4rem;
+    top: 3.25rem;
     cursor: pointer;
     transform-style: preserve-3d;
     transition: 250ms ease-in-out;
@@ -181,25 +182,34 @@ header ul li:nth-child(3) {
     font-weight: 600;
     text-decoration: none;
 }
-/* horizontal scroll */
-.horizontal-scroll {
-    margin: 1rem auto;
-    text-align: center;
-    width: 100%;
-    background: var(--clr-darkBlue);
-    padding: 10rem;
-}
-.horizontal-scroll h2 {
-    font-family: "Paytone One", serif;
-    font-size: clamp(1.25rem, 3vw, 1.5rem);
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-.horizontal-scroll p {
-    font-size: clamp(1rem, 3vw, 1.1rem);
+/* infinite scroll */
+.marquee {
+    display: flex;
+    font-size: 1.1rem;
+    border-top: 1.5px solid var(--clr-seafoam);
+    border-bottom: 1.5px solid var(--clr-seafoam);
+    text-transform: capitalize;
     letter-spacing: .5px;
-    margin: 10px auto;
+    padding: 1.5rem 0;
+    margin: 25px;
+    user-select: none;
+    overflow: hidden;
+    gap: 20px;
+}
+.marquee ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
+    list-style: none;
+    min-width: 100%;
+    gap: 20px;
+    animation: infinite-scroll 10s linear reverse infinite;
+}
+@keyframes infinite-scroll {
+    to {
+        transform: translateX(calc(-100% - 20px));
+    }
 }
 /* footer */
 footer {
