added content to the marquee

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 :root {
-    --clr-white: #f3f3f3;
+    --clr-white: #e7e7e7;
     --clr-offWhite: #cdcdcd;
     --clr-darkBlue: #08232c;
     --clr-lightTeal: #123642;
