--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
     --clr-darkBlue: #08232c;
     --clr-lightTeal: #123642;
     --clr-darkTeal: #062f3d;
-    --clr-oceanWhite: #f2f3f4;
     --clr-oceanBlue: #473aac;
     --clr-seafoam: #afafd7;
 }
@@ -44,16 +43,17 @@ header ul li {
     position: relative;
     top: 1rem;
     left: 1rem;
-    padding-right: .75rem;
     display: inline-block;
     font-size: 1rem;
     font-weight: 500;
     color: var(--clr-white);
     text-transform: capitalize;
+    padding-right: .75rem;
     z-index: 3;
 }
 header ul li:nth-child(1),
-header ul li:nth-child(3) {
+header ul li:nth-child(3),
+header ul li:nth-child(5) {
     cursor: pointer;
 }
 /* logo */
@@ -214,12 +214,91 @@ header ul li:nth-child(3) {
         transform: translateX(-100%);
     }
 }
+/* ocean animations */
+.waves-container {
+    margin-top: 5rem;
+}
+.waves-svg {
+    position: relative;
+    width: 100%;
+    height: 15vh;
+    margin-bottom: -10px;
+    min-height: 100px;
+    max-height: 150px;
+    z-index: -2;
+}
+.waves-group > use {
+    animation: waves 120s cubic-bezier(0.55, 0.5, 0.45, 0.5) forwards infinite;
+}
+@keyframes waves {
+    0% {
+        transform: translate3d(-90px, 0, 0);
+    }
+    100% {
+        transform: translate3d(85px, 0, 0);
+    }
+}
+.waves-group > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+}
+.waves-group > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+}
+.waves-group > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+    z-index: -2;
+}
+.waves-group > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+}
+.shark-container {
+    position: absolute;
+    width: 100%;
+}
+.shark {
+    width: 250px;
+    height: auto;
+    z-index: -1;
+}
+.shark-left {
+    position: relative;
+    bottom: 4.2rem;
+    animation: shark-left 25s linear forwards infinite;
+}
+@keyframes shark-left {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(1500px);
+    }
+}
+.shark-right {
+    position: relative;
+    bottom: 5.5rem;
+    animation: shark-right 22s linear reverse infinite;
+    z-index: -3;
+}
+@keyframes shark-right {
+    0% {
+        transform: translateX(-200%) scaleX(-1);
+    }
+    100% {
+        transform: translateX(1500px) scaleX(-1) rotate(0deg);
+    }
+}
 /* footer */
 footer {
     width: 100%;
     height: auto;
     background: var(--clr-lightTeal);
     padding: 30px 0;
+    box-shadow: 2px 2px 50px rgba(0, 0, 0, .7);
+    z-index: 10;
 }
 footer .container {
     display: grid;
@@ -241,3 +320,11 @@ footer .container .section ul li {
     margin: 10px auto;
     cursor: pointer;
 }
+
+/* media query's
+@media screen and (max-width: 768px) {
+    .waves {
+        height: 50px;
+        min-height: 50px;
+    }
+} */
