--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ header ul li:nth-child(5) {
         transform: translateX(-100%);
     }
 }
-/* ocean animations */
+/* ocean waves animation */
 .waves-container {
     margin-top: 5rem;
 }
@@ -225,7 +225,7 @@ header ul li:nth-child(5) {
     margin-bottom: -10px;
     min-height: 100px;
     max-height: 150px;
-    z-index: -2;
+    z-index: -1;
 }
 .waves-group > use {
     animation: waves 120s cubic-bezier(0.55, 0.5, 0.45, 0.5) forwards infinite;
@@ -281,7 +281,7 @@ header ul li:nth-child(5) {
     position: relative;
     bottom: 5.5rem;
     animation: shark-right 22s linear reverse infinite;
-    z-index: -3;
+    z-index: -2;
 }
 @keyframes shark-right {
     0% {
@@ -298,7 +298,6 @@ footer {
     background: var(--clr-lightTeal);
     padding: 30px 0;
     box-shadow: 2px 2px 50px rgba(0, 0, 0, .7);
-    z-index: 10;
 }
 footer .container {
     display: grid;
@@ -309,6 +308,7 @@ footer .container {
 footer .container .section {
     text-transform: capitalize;
     letter-spacing: .5px;
+    z-index: 3;
 }
 footer .container .section h3 {
     font-size: clamp(1rem, 3vw, 1.2rem);
