--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
 :root {
     --clr-white: #f3f3f3;
     --clr-offWhite: #cdcdcd;
+    --clr-lightGrey: #d5d5d5;
     --clr-darkBlue: #08232c;
     --clr-lightTeal: #123642;
     --clr-darkTeal: #062f3d;
     --clr-oceanBlue: #473aac;
-    --clr-seafoam: #afafd7;
+    --clr-seafoam: #e0e0e8;
 }
 body {
     width: 100%;
@@ -219,12 +220,12 @@ header ul li:nth-child(5) {
 }
 /* ocean waves animation */
 .waves-container {
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 .waves-svg {
     position: relative;
     width: 100%;
-    height: 15vh;
+    height: 20vh;
     margin-bottom: -10px;
     min-height: 100px;
     max-height: 150px;
@@ -281,12 +282,42 @@ footer .section h3 {
 }
 footer .section ul li {
     list-style: none;
-    color: var(--clr-offWhite);
-    font-size: clamp(1rem, 3vw, 1.05rem);
-    margin: 12px auto;
+    color: var(--clr-lightGrey);
+    font-size: 1.05rem;
+    margin: 15px auto;
     cursor: pointer;
 }
+footer .section ul li span {
+    color: var(--clr-offWhite);
+    text-transform: uppercase;
+    font-size: 1rem;
+}
 /* media query's */
+@media screen and (max-width: 1275px) {
+    .logo {
+        display: none;
+    }
+    .grid-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .grid-container img {
+        padding: 0 1rem;
+    }
+    .grid-container .right h2,
+    .grid-container .right p {
+        margin-left: 1rem;
+    }
+}
+@media screen and (max-width: 945px) {
+    footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: flex-start;
+    }
+    footer ul {
+        padding: 0 2rem;
+    }
+}
 @media screen and (max-width: 768px) {
     .waves {
         height: 50px;
