--- a/style.css
+++ b/style.css
@@ -62,10 +62,22 @@ header ul li:nth-child(3),
 header ul li:nth-child(5) {
     cursor: pointer;
 }
+/* hero */
+.hero {
+    position: relative;
+}
+.hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    mask-image: linear-gradient(180deg, 
+    rgba(0, 0, 0, 1) 70%, 
+    transparent 90%);
+}
 /* logo */
 .logo {
     position: absolute;
-    top: 65%;
+    top: 50%;
     left: 30.5%;
     transform: translateY(-50%, -50%);
     font-family: "Cinzel", serif;
@@ -79,16 +91,6 @@ header ul li:nth-child(5) {
     visibility: visible;
     opacity: 1;
     transform: translateY(72px);
-}
-/* hero */
-.hero img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    mask-image: linear-gradient(180deg, 
-    rgba(0, 0, 0, 1) 70%, 
-    transparent 90%);
 }
 /* main */
 .grid-container {
@@ -230,8 +232,7 @@ header ul li:nth-child(5) {
 .waves-svg {
     position: relative;
     width: 100%;
-    height: 20vh;
-    margin-bottom: -10px;
+    margin-bottom: -5px;
     min-height: 100px;
     max-height: 150px;
     z-index: -1;
@@ -272,7 +273,7 @@ footer {
     width: 100%;
     height: auto;
     background: var(--clr-lightTeal);
-    padding: 30px 0;
+    padding: 15px 0;
     box-shadow: 2px 2px 50px rgba(0, 0, 0, .7);
 }
 footer .section {
@@ -324,11 +325,5 @@ footer .section ul li span {
     }
     footer ul {
         padding: 0 2rem;
-    }
-}
-@media screen and (max-width: 768px) {
-    .waves {
-        height: 50px;
-        min-height: 50px;
     }
 }
