--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ header ul {
 }
 header ul li {
     position: relative;
-    top: 1rem;
-    left: 1rem;
+    top: .5rem;
+    left: .5rem;
     display: inline-block;
     font-size: clamp(1.1rem, 3vw, 1.15rem);
     color: var(--clr-white);
@@ -56,11 +56,6 @@ header ul li span {
     display: none;
     font-family: "Cinzel", serif;
     font-size: clamp(1.1rem, 3vw, 1.3rem);
-}
-header ul li:nth-child(1),
-header ul li:nth-child(3),
-header ul li:nth-child(5) {
-    cursor: pointer;
 }
 /* hero */
 .hero {
