--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     cursor: default;
 }
 .wrapper {
-    max-width: 86rem;
+    max-width: 90rem;
 }
 /* scrollbar */
 ::-webkit-scrollbar {
@@ -128,6 +128,9 @@ header ul li span {
     width: 100%;
     background: var(--clr-darkBlue);
 }
+.banner.no-margin {
+    margin: 0 auto;
+}
 .banner h2 {
     font-family: "Paytone One", serif;
     font-size: clamp(1.5rem, 3vw, 2rem);
@@ -220,6 +223,9 @@ header ul li span {
     }
 }
 /* animations */
+.animations {
+    overflow: hidden;
+}
 .waves {
     margin-top: 1rem;
 }
@@ -273,10 +279,11 @@ header ul li span {
 .foreground .boat-container {
     position: relative;
     animation: heave 3s alternate infinite;
+    width: 100%;
     z-index: -1;
 }
 .foreground .boat-container .fishing-boat {
-    width: 20%;
+    width: 250px;
     right: 0;
     bottom: -.95rem;
     animation: fishingBoat 30s alternate infinite;
