--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ header ul li span {
     position: absolute;
 }
 .foreground .pier {
-    width: 20%;
+    max-width: 255px;
     left: 0;
     bottom: 0;
 }
@@ -283,7 +283,7 @@ header ul li span {
     z-index: -1;
 }
 .foreground .boat-container .fishing-boat {
-    width: 250px;
+    max-width: 250px;
     right: 0;
     bottom: -.95rem;
     animation: fishingBoat 30s alternate infinite;
@@ -310,7 +310,7 @@ header ul li span {
     z-index: -2;
 }
 .foreground .no-fishing {
-    width: 7%;
+    max-width: 95px;
     right: 75%;
     bottom: -1.25rem;
     animation: noFishingSign 5s alternate infinite;
@@ -389,10 +389,44 @@ footer .section ul li span {
         margin-left: .75rem;
         width: 93%;
     }
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-650px);
+        }
+    }
+}
+@media screen and (max-width: 1123px) {
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-450px);
+        }
+    }
+    @keyframes floatingSignPost {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(500px);
+        }
+    }
 }
 @media screen and (max-width: 945px) {
     .banner {
         padding: 3.5rem 1.5rem;
+    }
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-250px);
+        }
     }
     footer {
         display: grid;
@@ -403,13 +437,105 @@ footer .section ul li span {
         padding: 0 .75rem;
     }
 }
-@media screen and (max-width: 495px) {
+@media screen and (max-width: 825px) {
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-350px);
+        }
+    }
+}
+@media screen and (max-width: 765px) {
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-200px);
+        }
+    }
+    @keyframes floatingSignPost {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(300px);
+        }
+    }
+}
+@media screen and (max-width: 605px) {
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-50px);
+        }
+    }
+    @keyframes floatingSignPost {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(150px);
+        }
+    }
+}
+@media screen and (max-width: 515px) {
     .marquee {
         margin: 30px auto 0;
         padding: .5rem;
     }
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-25px);
+        }
+    }
+    @keyframes floatingSignPost {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(200px);
+        }
+    }
     footer {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media screen and (max-width: 435px) {
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(75px);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+}
+@media screen and (max-width: 400px) {
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(90px);
+        }
+        100% {
+            transform: translateX(65px);
+        }
+    }
+}
+@media screen and (max-width: 330px) {
+    @keyframes fishingBoat {
+        0% {
+            transform: translateX(95px);
+        }
+        100% {
+            transform: translateX(85px);
+        }
     }
 }
