--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ header ul li span {
     margin: 50px auto 0;
     cursor: pointer;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     transition: 250ms ease-in-out;
     z-index: 1;
 }
@@ -189,10 +190,11 @@ header ul li span {
     position: absolute;
     top: 0;
     left: -7px;
-    width: calc(100% + 13px); 
-    height: calc(100% + 4px); 
+    width: calc(100% + 13px);
+    height: calc(100% + 4px);
     background-color: var(--clr-oceanBlue);
     transform: translateZ(-10px) rotate(13deg);
+    -webkit-transform: translateZ(-10px) rotate(13deg);
     cursor: default;
     transition: 250ms ease-in-out;
     z-index: -1;
